# Rokey_Cobot2

./: .gitignore  README.md  requirements.txt  test_fruit.py  test_yolo.py
corecode/Calibration_Tutorial/: verify.py
etc/: cam2depth.py  camera2camera_hand.py  test_fruit.py
etc/corecode/Calibration_Tutorial/: modbus.py
etc/corecode/VoiceProcessing/: keyword_extraction.py
etc/resource/: T_gripper2camera.npy
gesture_robot_pkg/: setup.py
gesture_robot_pkg/gesture_robot_pkg/: onrobot.py  vision_node.py  webcam_teleop_node.py
jarvis_voice_pkg/: setup.py
jarvis_voice_pkg/jarvis_voice_pkg/: config.py  intent_engine.py  voice_intent_node.py
object_width_filter/: setup.py
object_width_filter/launch/: object_width_filter.launch.py
object_width_filter/object_width_filter/: angle_test_publisher.py  length_filter.py  z_normal.py
src/gesture_robot_interfaces/: CMakeLists.txt
src/gesture_robot_interfaces/action/: PickAndPlace.action
src/gesture_robot_interfaces/msg/: SelectedObject.msg
src/gesture_robot_pkg/: package.xml
src/gesture_robot_pkg/gesture_robot_pkg/: __init__.py  constants.py  orchestrator_node.py  pick_and_place_node.py  utils.py  vision_node.py  webcam_teleop_node.py
src/gesture_robot_pkg/launch/: gesture_robot.launch.py
src/jarvis_voice_pkg/jarvis_voice_pkg/: config.py  intent_engine.py  publisher.py  recorder.py  voice_intent_node.py  workspace_scan_node.py
src/object_width_filter/: package.xml  사용법.txt
src/object_width_filter/launch/: object_width_filter.launch.py
src/object_width_filter/object_width_filter/: _test_cam2depth.py  length_filter.py  publish_angle.py  z_normalization.py
src/robot_state_control/launch/: robot_state_control.launch.py
web_cobot_ws/: README.md
web_cobot_ws/jarvis_webrtc/: jarvis_ros.sh  jarvis_start.sh  jarvis_web.sh  webrtc_server.py  webrtc_vision_server.py
web_cobot_ws/src/gesture_robot_pkg/: setup.cfg
web_cobot_ws/src/jarvis_voice_pkg/: package.xml  setup.cfg  setup.py
web_version_git/jarvis-ui/signaling-server/: Procfile  railway.json  signaling_server.py
web_version_git/jarvis-ui/web-app/: package-lock.json  package.json  seed.mjs  vite.config.js
web_version_git/jarvis_webrtc/: jarvis_ros.sh  jarvis_web.sh  signaling_server.py  webrtc_server.py  webrtc_vision_server.py
web_version_git/src/gesture_robot_interfaces/: package.xml
web_version_git/src/gesture_robot_interfaces/action/: PickAndPlace.action
web_version_git/src/gesture_robot_pkg/: setup.py
web_version_git/src/jarvis_bringup/: package.xml
web_version_git/src/jarvis_bringup/launch/: gesture.launch.py  jarvis_main.launch.py  object_filter.launch.py  state_control.launch.py  voice.launch.py
web_version_git/src/object_width_filter/: setup.cfg
web_version_git/src/robot_state_control/: package.xml  setup.cfg  (+1 more)
web_version_git/web_version_git/: 이름 없는 문서 1
(+77 files in other folders)
