<?xml version="1.0"?>
<package format="3">
  <name>gesture_robot_pkg</name>
  <version>1.0.0</version>
  <description>
    Gesture-driven robot teleoperation and pick-and-place:
    webcam_teleop_node, vision_node, orchestrator_node, pick_and_place_node
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Custom interfaces -->
  <depend>gesture_robot_interfaces</depend>

  <!-- Robot driver -->
  <depend>dsr_msgs2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
