<?xml version="1.0"?>
<package format="3">
  <name>jarvis_bringup</name>
  <version>1.0.0</version>
  <description>짱구네 로봇 시스템 통합 launch 패키지</description>
  <maintainer email="kng@jarvis.local">kng</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>gesture_robot_pkg</exec_depend>
  <exec_depend>jarvis_voice_pkg</exec_depend>
  <exec_depend>object_width_filter</exec_depend>
  <exec_depend>robot_state_control</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
